<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindJerry</string>
    <string name="title_activity_maps">Find Jerry</string>
    <string name="Token">Token</string>
    <string name="Heading">Heading: 0.0</string>
    <string name="Lat">Latitude</string>
    <string name="Long">Longitude</string>
    <string name="QRCode">QR Code</string>
    <string name="PostData">Post Data</string>
    <string name="Valid">Valid Until</string>
    <string name="Response">Response</string>
    <string name="Kompas">Kompas</string>

</resources>
